<resources>
    <string name="app_name">JMT</string>
    <string name="app_name_dev">JMT dev</string>
    <string name="apple_provider">apple.com</string>

    <string name="confirm">확인</string>
    <string name="next">다음</string>
    <string name="change">변경하기</string>

    <string name="album_all">전체</string>

    <string name="enable_nickname">사용 가능한 닉네임입니다.</string>
    <string name="unable_nickname_cause_special_characters">특수 문자는 사용이 불가능합니다.</string>
    <string name="unable_nickname_cause_duplicated">이미 사용중인 닉네임입니다.</string>
    <string name="nickname_hint">닉네임을 입력하세요.</string>
    <string name="search_hint">음식이나 식당명을 검색하세요</string>
    <string name="already_registered">이미 등록된 식당입니다.</string>

    <string name="content_description_nickname_verify">닉네임 유효성 검증</string>
    <string name="continue_with_google">Google로 계속하기</string>
    <string name="continue_with_apple"><u>애플 계정으로 계속하기</u></string>

    <string name="ask_nickname">반가워요\n어떻게 불러드리면 될까요?</string>

    <string name="congratulation_sign_up">가입을 축하합니다!</string>
    <string name="alert_setting_profile_image">설정하지 않으면 기본 이미지로 표시됩니다.</string>
    <string name="suggest_set_profile_image">나의 프로필 사진을 설정해볼까요?</string>
    <string name="content_description_profile_image">프로필 이미지</string>
    <string name="content_description_profile_image_setting_button">프로필 이미지 설정 버튼</string>
    
    <string name="title_user_name">사용자 이름</string>
    <string name="title_user_name_edit">사용자 이름 수정</string>
    <string name="enable_nick_name_change">닉네임 변경이 완료되었어요.</string>
    <string name="unable_nick_name_change">닉네임을 변경하지 못했어요.</string>
    <string name="enable_profile_image_change">프로필 사진 변경이 완료되었어요.</string>
    <string name="unable_profile_image_change">프로필 사진을 변경하지 못했어요.</string>



    <string name="group_menu">그룹 맛집</string>
    <string name="searching_menu">검색</string>
    <string name="my_group_menu">내 그룹</string>
    <string name="profile_menu">프로필</string>
    <string name="search_icon_content_description">맛집 검색 아이콘</string>
    <string name="cancel">취소</string>
    <string name="select">선택</string>
    <string name="do_select">선택하기</string>
    <string name="register">등록하기</string>
    
    
    <string name="search_category_all">전체</string>
    <string name="search_category_restaurant">맛집</string>
    <string name="search_category_group">그룹</string>

    <string name="distance_from_current_location">내 위치에서 %s</string>
    <string name="get_location_error">위치 정보를 가져올 수 없습니다.</string>
    <string name="request_restaurant_category">(필수) 식당 종류를 선택해주세요</string>
    <string name="restaurant_introduction_hint">(필수) 멤버들에게 맛집소개 한마디를 적어주세요</string>
    <string name="ask_drink_possibility">음주도 가능한가요?</string>
    <string name="recommend_menu">(필수) 추천해주고 싶은 메뉴</string>
    <string name="guide_recommend_menu">#으로 시작해주세요 (최대 6개)</string>
    <string name="recommend_menu_hint">#돈까스 #짜장면 #치킨</string>
    <string name="guide_can_drink">술과 함께 즐길 수 있어요</string>
    <string name="text_counter_max_one_hundred">%d/100</string>
    <string name="text_counter_max_ten">%d/10</string>
    <string name="guide_recommend_drink">어떤 술과 어울리는지 알려주세요!</string>

    <string name="select_text_counter_max_ten">선택하기 %d/10</string>
    <!-- myPage-->
    <string name="liked_restaurant">좋아한 맛집</string>
    <string name="my_review">등록한 후기</string>
    <string name="registered_restaurant">등록한 맛집</string>
    <string name="follower">팔로워</string>
    <string name="following">팔로잉</string>
    <string name="spinner_button">스피너 버튼</string>



    <string name="service_not_yet">앗, 서비스 준비 중이에요!\n &#160;&#160;조금만 기다려주세요.</string>
    <string name="result_empty">등록한 맛집이 없어요</string>
    <string name="jmt_character_image">존마탱 캐릭터 이미지</string>
    <string name="search_for_recommendable_restaurant">추천 해주고 싶은\n 맛집을 검색해주세요!</string>
    <string name="no_searched_result">검색 결과가 없어요.\n올바른 식당명인지 확인해주세요.</string>

</resources>