<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.SignUpCompleteFragment">

    <TextView
        android:id="@+id/congratulatory_text"
        android:text="@string/congratulation_sign_up"
        android:textAppearance="@style/title_medium_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="56dp"/>

    <TextView
        android:id="@+id/ask_profile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/text_large_medium"
        android:text="@string/suggest_set_profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/congratulatory_text"
        android:layout_marginTop="8dp"/>
    
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ask_profile_text"
        android:src="@drawable/base_profile_image"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/content_description_profile_image" />

    <ImageView
        android:id="@+id/profile_image_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/profile_image"
        android:src="@drawable/profile_image_add_button"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        android:contentDescription="@string/content_description_profile_image_setting_button" />

    <TextView
        android:id="@+id/nickname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/title_small_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        android:layout_marginTop="12dp"
        tools:text="닉네임"/>

    <TextView
        android:id="@+id/profile_setting_alert_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_setting_profile_image"
        android:textAppearance="@style/text_medium_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/next_btn"
        android:layout_marginBottom="36dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_btn"
        android:layout_width="0dp"
        android:layout_height="62dp"
        style="@style/JmtButton"
        android:text="@string/next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="36dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>