<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.SignUpNicknameFragment">

    <TextView
        android:id="@+id/ask_nickname_text"
        android:text="@string/ask_nickname"
        android:textAppearance="@style/title_medium_bold"
        android:lineSpacingExtra="12dp"
        android:layout_marginTop="56dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>

    <org.gdsc.presentation.view.custom.JmtEditText
        android:id="@+id/nickname_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:jmtEditTextHint="@string/nickname_hint"
        app:verifyTextEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ask_nickname_text"
        android:layout_marginTop="24dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_btn"
        android:text="@string/next"
        android:layout_width="0dp"
        android:layout_height="62dp"
        style="@style/JmtButtonMain"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="36dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>