<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/jmt_background"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nickname_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@null"
            android:textAppearance="@style/text_large_medium"
            android:textCursorDrawable="@null"
            android:autofillHints="username"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="text"
            tools:hint="@string/nickname_hint"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/verify_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/container">

        <ImageView
            android:id="@+id/verify_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:src="@drawable/check_icon"
            android:contentDescription="@string/content_description_nickname_verify" />
        <Space
            android:layout_width="4dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/verify_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main600"
            android:textAppearance="@style/text_medium_medium"
            tools:text="@string/enable_nickname"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>