<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.restaurantregistration.RegisterRestaurantFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/button_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <androidx.cardview.widget.CardView
                android:id="@+id/restaurant_category_card"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:elevation="8dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/food_category_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/food_category_text"
                        style="@style/text_large_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/ask_restaurant_category"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/select_images_button"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="23dp"
                android:src="@drawable/border_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/restaurant_category_card" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/select_images_button"
                app:layout_constraintEnd_toEndOf="@id/select_images_button"
                app:layout_constraintStart_toStartOf="@id/select_images_button"
                app:layout_constraintTop_toTopOf="@id/select_images_button">

                <ImageView
                    android:id="@+id/camera_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/camera_icon" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="6dp" />

                <TextView
                    android:id="@+id/select_image_count_text"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    tools:text="10/10" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/selected_images_recycler_view"
                android:layout_width="0dp"
                android:layout_height="120dp"
                app:layout_constraintTop_toTopOf="@+id/select_images_button"
                app:layout_constraintBottom_toBottomOf="@+id/select_images_button"
                app:layout_constraintStart_toEndOf="@+id/select_images_button"
                app:layout_constraintEnd_toEndOf="parent"/>



            <View
                android:id="@+id/first_divider"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/grey100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/select_images_button" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/introduction_edit_text_container"
                android:layout_width="0dp"
                android:layout_height="305dp"
                android:layout_margin="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_divider">

                <EditText
                    android:id="@+id/introduction_edit_text"
                    style="@style/text_large_medium"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="4dp"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/restaurant_introduction_hint"
                    android:inputType="textMultiLine"
                    android:textColorHint="@color/grey300"
                    app:layout_constraintBottom_toTopOf="@id/introduction_text_counter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/introduction_text_counter"
                    style="@style/text_medium_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey300"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/second_divider"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/grey100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/introduction_edit_text_container" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/drink_possibility_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:animateLayoutChanges="true"
                android:paddingBottom="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/second_divider">

                <TextView
                    android:id="@+id/ask_drink_possibility_text"
                    style="@style/text_medium_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/ask_drink_possibility"
                    android:textColor="@color/grey700"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/drink_possibility_checkbox_container"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/food_category_item_background"
                    android:gravity="center_vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ask_drink_possibility_text">

                    <ImageView
                        android:id="@+id/drink_possibility_checkbox"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/jmt_checkbox_background" />

                    <TextView
                        style="@style/text_large_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/guide_can_drink"
                        app:layout_constraintStart_toEndOf="@id/drink_possibility_checkbox" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <org.gdsc.presentation.view.custom.JmtEditText
                    android:id="@+id/recommend_drink_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:jmtEditTextHint="@string/guide_recommend_drink"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/drink_possibility_checkbox_container" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/third_divider"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/grey100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/drink_possibility_container" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="226dp"
                android:layout_margin="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/third_divider">

                <TextView
                    android:id="@+id/recommend_menu_text"
                    style="@style/text_medium_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/recommend_menu"
                    android:textColor="@color/grey700"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/text_small_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@color/main100"
                    android:text="@string/guide_recommend_menu"
                    android:textColor="@color/main600"
                    app:layout_constraintBottom_toBottomOf="@id/recommend_menu_text"
                    app:layout_constraintStart_toEndOf="@id/recommend_menu_text"
                    app:layout_constraintTop_toTopOf="@id/recommend_menu_text" />

                <org.gdsc.presentation.view.custom.JmtEditText
                    android:id="@+id/recommend_menu_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    app:jmtEditTextHint="@string/recommend_menu_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recommend_menu_text"
                    app:verifyTextEnabled="false" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/recommend_menu_chip_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recommend_menu_edit_text">

                </com.google.android.material.chip.ChipGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="12dp"
            android:background="@color/grey100" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button"
            style="@style/JmtButton"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/register" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>